SessionManager 정리